2002-08-22  Luke Gorrie  <luke@bluetail.com>

	* elisp/edb.el: Various debugger improvements: Monitor buffer pops
	up when an unattached process hits a breakpoint (unless
	`edb-popup-monitor-on-event' is nil); Monitor better intercepts
	debug commands to either start monitoring or switch nodes; 'q' now
	hides rather than kills the monitor buffer/process ('k' kills).

2002-08-21  Luke Gorrie  <luke@bluetail.com>

	* config/emacs-init-snippet.el.in: Now being careful to add
	Distel at the end of the load-path, so that the
	possibly-redundant files we include for compatibility (ewoc.el,
	md5.el) don't override any locally installed ones.

	* README, Makefile.in (VERSION): Increased 3.0a -> 3.0b to
	distinguish from the version installed on Bluetail'ers' machines
	earlier today.

	* elisp/edb.el, elisp/distel.erl: Erlang-extended-mode buffers now
	indicate via the mode line whether they are currently being
	interpreted. Also extended/improved the recent debug monitoring
	changes.

	* elisp/erl.el (erl-reductions): Added reductions counter, saying
	how many times a process has been executed (_not_ how many calls
	it has made, like Erlang reductions). This can be inspected
	directly for debug purposes.

	* config/emacs-init-snippet.el.in: Using autoconf on the .emacs
	snippet to setup the right load-path. It seems that just making a
	directory in ${prefix}/share/emacs/site-lisp/ doesn't get you
	into the load path automatically.

	* elisp/edb.el, distel.erl: Reworked the debugger so that the
	Monitor process tracks the current set of breakpoints and
	interpreted modules. This lays the ground work for showing
	breakpoints in source code, and indicating which modules are
	interpreted via the mode line -- but that's not implemented
	yet. Meanwhile, the debugger appears to still work :-)

	* Makefile.in: Moved the documentation onto separate targets:
	  "info", "info_install", "postscript". Hopefully this will avoid